--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="postureContainer">
+    <div id="startContainer">
+        <button id="startButton">Start Posture Detection</button>
+    </div>
+    <div id="postureContainer" style="display: none;">
         <h1 id="postureTitle">Posture Detection</h1>
         <p id="postureMessage">Monitoring your posture...</p>
     </div>
